tests/good/nil.go
package main
func main() {
	var p *int 
	p = nil
}
