tests/bad/notallreturns.go
package main
func foo(x int) int { 
	if x > 0 {
		return 1 
	} else { 
		x = 2 
	}}
func main() {}
